Add Resort Image and page links to website pages.

--- a/index.html
+++ b/index.html
@@ -6,12 +6,20 @@
   <body>
     <h1>VINJARI RESORT</h1>
     <h2>Enjoy Beautiful Scenery and World Class service all year round</h2>
+    <img src="images/Island_resort.jpg" alt="Island Resort">
     <p>Welcome to the official Vinjari Resort website. We offer world Class
       hospitality to our esteemed customers. Enjoy your leisure time at our
       strategically chosen location which gives you the best scenery all day long.
     </p>
     <p>Nature always wears the colors of the spirit.
     </p>
+    <ol>
+      <li><a href="accommodations.html">Accommodations</a></li>
+      <li><a href="activities.html">Activities</a></li>
+      <li><a href="travel_arrangements.html">Travel Arrangements</a></li>
+      <li><a href="pictures.html">Pictures</a></li>
+      <li><a href="contact_information.html">Contact Information</a></li>
+    </ol>
 
 
   </body>
