--- a/accommodations.html
+++ b/accommodations.html
@@ -6,6 +6,12 @@
   <body>
     <h1>ACCOMODATIONS</h1>
     <p>Here are our state of the art rooms:</p>
+    <ul>
+      <li><img src="images/suite1.jpeg" alt="Suite 1"><br>Suite 1</li>
+      <li><img src="images/suite2.jpeg" alt="Suite 2"><br>Suite 2</li>
+      <li><img src="images/suite3.jpeg" alt="Suite 3"><br>Suite 3</li>
+      <li><img src="images/suite4.jpeg" alt="Suite 4"><br>Suite 4</li>
+    </ul>  
 
   </body>
 </html>
