--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
   <head>
     <title>VINJARI RESORT</title>
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <h1>VINJARI RESORT</h1>
     <h2>Enjoy Beautiful Scenery and World Class service all year round</h2>
-    <img src="images/Island_resort.jpg" alt="Island Resort">
+    <img src="images/Island_resort.jpg" alt="Island Resort" class="center">
     <p>Welcome to the official Vinjari Resort website. We offer world Class
       hospitality to our esteemed customers. Enjoy your leisure time at our
       strategically chosen location which gives you the best scenery all day long.
