Add styling for body, h1, h2, p, ol and ul

--- a/accommodations.html
+++ b/accommodations.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Accomodations</title>
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <h1>ACCOMODATIONS</h1>
@@ -11,7 +12,8 @@
       <li><img src="images/suite2.jpeg" alt="Suite 2"><br>Suite 2</li>
       <li><img src="images/suite3.jpeg" alt="Suite 3"><br>Suite 3</li>
       <li><img src="images/suite4.jpeg" alt="Suite 4"><br>Suite 4</li>
-    </ul>  
+    </ul>
+    <p>Book online or call us: +254792599994</p>
 
   </body>
 </html>
