--- a/activities.html
+++ b/activities.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Activities</title>
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <h1>Resort Activities</h1>
