--- a/contact_information.html
+++ b/contact_information.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Contact Information</title>
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <h1>Contact Information</h1>
