--- a/pictures.html
+++ b/pictures.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Pictures</title>
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <h1>Pictures</h1>
