--- a/travel_arrangements.html
+++ b/travel_arrangements.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Travel Arrangements</title>
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <h1>Travel Arrangements</h1>
